tian/cd22/web168-git/k205/dry-run-output.yaml
# kubectl apply -k k205 --dry-run=client -o yaml
apiVersion: v1
items:
- apiVersion: v1
  data:
    git-init.sh: "#!/bin/sh\nmkdir -p /app/repo/foo\ngit config --system http.receivepack
      true\ngit config --system http.uploadpack true\ngit config --system user.email
      \"gitserver@dev.local\"\ngit config --system user.name \"Git Server\"\ngit config
      --global user.email \"you@example.com\"\ngit config --global user.name \"Your
      Name\"\ncd /app/repo/foo &&  git init --bare -q\nmkdir -p /app/repo/bar && cd
      /app/repo/bar && git init -q --bare\n#\n# https://github.com/ryan0x44/local-git-server\n#\ncat
      <<\\EOF > /etc/lighttpd/lighttpd.conf\nserver.document-root = \"/app/repo\"\nserver.modules
      += ( \"mod_alias\", \"mod_cgi\", \"mod_setenv\" )\n$HTTP[\"host\"] =~ \"\" {
      \nalias.url += ( \"/git\" => \"/usr/libexec/git-core/git-http-backend\")\n$HTTP[\"url\"]
      =~ \"^/git\" {\n    cgi.assign = ( \"\" => \"\" )\n    setenv.add-environment
      = (\n    \"GIT_PROJECT_ROOT\" => \"/app/repo\",\n    \"GIT_HTTP_EXPORT_ALL\"
      => \"1\"\n    )\n}\n}\nEOF\nlighttpd -D -f /etc/lighttpd/lighttpd.conf"
    vscode-init.sh: |-
      [...]
  kind: ConfigMap
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{"git-init.sh":"#!/bin/sh\nmkdir -p /app/repo/foo\ngit config --system http.receivepack true\ngit config --system http.uploadpack true\ngit config --system user.email \"gitserver@dev.local\"\ngit config --system user.name \"Git Server\"\ngit config --global user.email \"you@example.com\"\ngit config --global user.name \"Your Name\"\ncd /app/repo/foo \u0026\u0026  git init --bare -q\nmkdir -p /app/repo/bar \u0026\u0026 cd /app/repo/bar \u0026\u0026 git init -q -- [...]
    labels:
      app.cd22.dltdojo/name: k205
    name: cm-init-sh-ccmh7mc6hf
    namespace: default
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.cd22.dltdojo/name":"k205"},"name":"gitsrv205","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app.cd22.dltdojo/name":"k205","run":"gitsrv205"}}}
    labels:
      app.cd22.dltdojo/name: k205
    name: gitsrv205
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app.cd22.dltdojo/name: k205
      run: gitsrv205
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.cd22.dltdojo/name":"k205"},"name":"vscode205","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":3000}],"selector":{"app.cd22.dltdojo/name":"k205","run":"vscode205"}}}
    labels:
      app.cd22.dltdojo/name: k205
    name: vscode205
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app.cd22.dltdojo/name: k205
      run: vscode205
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.cd22.dltdojo/name":"k205"},"name":"gitsrv205","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.cd22.dltdojo/name":"k205","run":"gitsrv205"}},"template":{"metadata":{"labels":{"app.cd22.dltdojo/name":"k205","run":"gitsrv205"}},"spec":{"containers":[{"args":["-c","echo \"Install lighttpd and git-http-backend\"\napk --no-cache add busybox-extras curl git-daemon lighttpd\nenv\ni [...]
    labels:
      app.cd22.dltdojo/name: k205
    name: gitsrv205
    namespace: default
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.cd22.dltdojo/name: k205
        run: gitsrv205
    template:
      metadata:
        labels:
          app.cd22.dltdojo/name: k205
          run: gitsrv205
      spec:
        containers:
        - args:
          - -c
          - |
            echo "Install lighttpd and git-http-backend"
            apk --no-cache add busybox-extras curl git-daemon lighttpd
            env
            id
            /opt/sh/git-init.sh
          command:
          - sh
          image: public.ecr.aws/docker/library/alpine:3.17.0
          name: gitsrv205
          ports:
          - containerPort: 80
          resources: {}
          volumeMounts:
          - mountPath: /opt/sh/git-init.sh
            name: cm-init-sh
            subPath: git-init.sh
        volumes:
        - configMap:
            defaultMode: 493
            name: cm-init-sh-ccmh7mc6hf
          name: cm-init-sh
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.cd22.dltdojo/name":"k205"},"name":"vscode205","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.cd22.dltdojo/name":"k205","run":"vscode205"}},"template":{"metadata":{"labels":{"app.cd22.dltdojo/name":"k205","run":"vscode205"}},"spec":{"containers":[{"args":["-c","echo \"starting gitpod openvscode service\"\nsleep 15\nenv\nid\n/opt/sh/vscode-init.sh\n"],"command":["sh"],"image [...]
    labels:
      app.cd22.dltdojo/name: k205
    name: vscode205
    namespace: default
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.cd22.dltdojo/name: k205
        run: vscode205
    template:
      metadata:
        labels:
          app.cd22.dltdojo/name: k205
          run: vscode205
      spec:
        containers:
        - args:
          - -c
          - |
            echo "starting gitpod openvscode service"
            sleep 15
            env
            id
            /opt/sh/vscode-init.sh
          command:
          - sh
          image: gitpod/openvscode-server:1.73.1
          name: vscode205
          ports:
          - containerPort: 3000
          resources: {}
          volumeMounts:
          - mountPath: /opt/sh/vscode-init.sh
            name: cm-init-sh
            subPath: vscode-init.sh
        volumes:
        - configMap:
            defaultMode: 493
            name: cm-init-sh-ccmh7mc6hf
          name: cm-init-sh
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      ingress.kubernetes.io/ssl-redirect: "false"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/ssl-redirect":"false","kubernetes.io/ingress.class":"traefik"},"labels":{"app.cd22.dltdojo/name":"k205"},"name":"myingress","namespace":"default"},"spec":{"rules":[{"host":"gitsrv204.localhost","http":{"paths":[{"backend":{"service":{"name":"gitsrv205","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"vscode204.localhost","http":{"paths":[{"backend":{"service":{"name": [...]
      kubernetes.io/ingress.class: traefik
    labels:
      app.cd22.dltdojo/name: k205
    name: myingress
    namespace: default
  spec:
    rules:
    - host: gitsrv204.localhost
      http:
        paths:
        - backend:
            service:
              name: gitsrv205
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: vscode204.localhost
      http:
        paths:
        - backend:
            service:
              name: vscode205
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
