tian/cd22/web168-git/k205/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: gitsrv204.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitsrv205
                port:
                  number: 80
    - host: vscode204.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vscode205
                port:
                  number: 80
